--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 **/.DS_Store
 **/._.DS_Store
 /.env
-/.env.directus
-/.env.nuxt
-/.env.postgres
-/.env.minio
+!/.env.sample
+/.env.*
+!/.env*.sample
 /.idea
-.docker/postgres/data
-.docker/logs
+/.docker/logs
+/.docker/postgres/data
+/.docker/minio/data
+/.docker/redis/data
+/.docker/traefik/certs
