--- a/compose.local.yaml
+++ b/compose.local.yaml
@@ -1,5 +1,6 @@
 services:
   traefik:
+    container_name: '${COMPOSE_PROJECT_NAME:-app}-traefik'
     image: traefik:v3.2
     command:
       - "--accesslog"
