--- a/.env.directus.sample
+++ b/.env.directus.sample
@@ -19,7 +19,7 @@ STORAGE_S3_FORCE_PATH_STYLE=true
 CACHE_ENABLED=true
 CACHE_AUTO_PURGE=true
 CACHE_STORE=redis
-REDIS=redis://cache:6379
+REDIS=redis://redis:6379
 
 WEBSOCKETS_ENABLED=true
 
